<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView3"
            android:text="@string/title_login"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_marginTop="39dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUsuario"
        android:hint="@string/hint_user"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtContrasena"
        android:layout_below="@+id/txtUsuario"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:hint="@string/hint_pass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:id="@+id/btnLogin"
        android:gravity="center"
        android:background="@drawable/btn_green_circle_corners"
        android:layout_below="@+id/txtContrasena"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unete a Nosotros"
        android:padding="6dp"
        android:id="@+id/btnUnete"
        android:background="@drawable/btn_blue_circle_corners"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="¿No tienes una cuenta?"
        android:id="@+id/textView4"
        android:layout_below="@+id/btnLogin"
        android:layout_alignStart="@+id/btnUnete"
        android:layout_marginTop="31dp" />


</RelativeLayout>